-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.2
-
9004cbdc2 (dev), 5009a1124 (6.6), d0cf2e7e9 (6.5)
Signal {
name: "screenChanged"
Parameter { type: "QScreen"; isPointer: true }
}
Property {
name: "screen"
type: "QScreen"
isPointer: true
read: "screen"
write: "setScreen"
notify: "screenChanged"
index: 1
}
- relates to
-
QTBUG-115563 QCameraDevice is declared twice in the qmltypes file
-
- Closed
-
| For Gerrit Dashboard: QTBUG-115568 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 507300,2 | Expose QScreen to QML | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 508368,2 | Expose QScreen to QML | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 508457,2 | Expose QScreen to QML | 6.5 | qt/qtmultimedia | Status: MERGED | +2 | 0 |