Expose QScreen to QML

Since QQuickScreenCapture is constructed with inheritance, the original
"screen" property is still visible in the qmltypes. It should have been
constructed with composition instead.

Now, since tooling needs to see all types for all properties, we need to
expose QScreen here.

Fixes: QTBUG-115568
Change-Id: I40f115756e5e81d0dd9a49dfd994d74a247b8279
Reviewed-by: Marco Bubke <marco.bubke@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit 9004cbdc2c4be6b693cddd1f536fa04e064729dd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 5009a11245b56760865c7f05cae70c0d4f2f89b0)