src/multimediaquick/qtmultimediaquicktypes_p.h
@@ -49,6 +49,13 @@ struct QScreenCaptureForeign
     QML_FOREIGN(QScreenCapture)
 };
 
+struct QScreenForeign
+{
+    Q_GADGET
+    QML_ANONYMOUS
+    QML_FOREIGN(QScreen)
+};
+
 struct QMediaRecorderForeign
 {
     Q_GADGET
